--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
                     Popular topic, already has 1700+ backlinks built in. $1000
                 </p>
                 <div class="d-flex">
-                    <div class="col-lg-6 col-md-12 p-3 ">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-12 p-3 ">
                         <ul class="list-group ">
                             <li class="list-group-item bg-success border-success active" aria-current="true">Keywords</li>
                             <li class="list-group-item">1. Keto</li>
@@ -35,7 +35,7 @@
                         <script type="text/javascript" src="https://ssl.gstatic.com/trends_nrtr/2674_RC03/embed_loader.js"></script> <script type="text/javascript"> trends.embed.renderExploreWidget("TIMESERIES", {"comparisonItem":[{"keyword":"keto","geo":"","time":"today 12-m"},{"keyword":"xp","geo":"","time":"today 12-m"},{"keyword":"diet","geo":"","time":"today 12-m"}],"category":0,"property":""}, {"exploreQuery":"q=keto,xp,diet&date=today 12-m,today 12-m,today 12-m","guestPath":"https://trends.google.com:443/trends/embed/"}); </script>
                     </div>
                     
-                    <div class="col-lg-6 col-md-12 p-3">
+                    <div class="col-lg-6 col-md-12 col-sm-12 col-12 p-3">
                         <ul class="list-group">
                             <li class="list-group-item bg-success border-success active" aria-current="true">Domain Appraisals Results</li>
                             <li class="list-group-item"><a  href="https://in.godaddy.com/domain-value-appraisal/appraisal/?checkAvail=1&domainToCheck=KetoXpDiet.com" target="_blank" rel="noopener noreferrer"> GoDaddy &nbsp; <i class="bi bi-arrow-bar-right"></i> &nbsp; <b class="text-success">$519</b></a> </li>
@@ -60,9 +60,9 @@
 
                 </div>
 
-                <div class="d-flex justify-content-around">
-                    <a class="btn btn-success col-lg-6 col-md-12 m-3" href="tel:"> <i class="bi bi-telephone-outbound-fill"></i> &nbsp; +1 00000000000 </a>
-                    <a class="btn btn-success col-lg-6 col-md-12 m-3" href="mailto:"> <i class="bi bi-envelope"></i> &nbsp; itrebels.in@gmail.com </a>
+                <div class="row justify-content-around">
+                    <a class="btn btn-success col-lg-6 col-md-10 col-sm-12 col-10 m-3" href="tel:"> <i class="bi bi-telephone-outbound-fill"></i> &nbsp; +1 00000000000 </a>
+                    <a class="btn btn-success col-lg-6 col-md-10 col-sm-10 col-10 m-3" href="mailto:"> <i class="bi bi-envelope"></i> &nbsp; itrebels.in@gmail.com </a>
                 </div>
                 
             </div>
